tests/fixtures/invalid/pow_bytes_float_bytes.py
# Cannot call pow() with Bytes, Float, Bytes
x = pow(b"hello", 1.0, b"hello")
